--- a/ModelProject/Components/Pages/Upload.razor
+++ b/ModelProject/Components/Pages/Upload.razor
@@ -10,14 +10,15 @@
 
 @*Checks if the user is signed in*@
 <AuthorizeView>
-    <Authorized>
-      <EditForm Model="@Model" OnInvalidSubmit="@HandleSubmit"
+    <Authorized Context="Auth">
+      @Auth.User
+      <EditForm Model="@Model" OnInvalidSubmit="@HandleSubmit">
         <h5>Upload Page</h5>
         <form class="row g-3 needs-validation" novalidate>
             @*Allows the user to input a Model Name:*@
             <div class="col-md-4 position-relative">
                 <label for="validationTooltip01" class="form-label">Model Name:</label>
-                <input type="text" class="form-control" @bind-value="Model.Title" id="validationTooltip01" required>
+                <input type="text" class="form-control" @bind="Model.Title" id="validationTooltip01" required>
                 <div class="valid-tooltip">
                     Perfect
                 </div>
@@ -26,20 +27,20 @@
             @*Allows the user to input the Files of a 3D model*@
             <div class="mb-3">
                 <label for="=" formFile" class="form-label">Please Input The Model Files</label>
-                <input class="form-control" type="file" id="formFile" accept=".obj,.fbx,.stl,.gltf,.glb" required>
+                <input class="form-control" @bind="Model.ModelFiles" type="file" id="formFile" accept=".obj,.fbx,.stl,.gltf,.glb" required>
                 
             </div>
 
             @*Allows the user to input images of a 3D model*@
             <div class="mb-3">
                 <label for="=" formFile" class="form-label">Please Input Images of the 3D Model</label>
-                <input class="form-control" type="file" id="formFile" accept=".jpf,.jpeg,.png" multiple>
+                <input class="form-control" @bind="Model.Images" type="file" id="formFile" accept=".jpf,.jpeg,.png" multiple>
             </div>
 
             @*Allows the user to input a description*@
             <div class="input-group mb-3">
                 <span class="input-group-text" id="validationTooltip02">Description:</span>
-                <input type="text" class="form-control" id="validationTooltip02" aria-label="Enter Here" aria-describedy="inputGroup-sizing-defullt">
+                <input type="text" class="form-control" @bind="Model.Description" id="validationTooltip02" aria-label="Enter Here" aria-describedy="inputGroup-sizing-defullt">
                 <div class="valid-tooltip">
                     Perfect
                 </div>
@@ -48,43 +49,39 @@
             @*Allows the user to input Specifcations*@
             <div class="input-group mb-3">
                 <span class="input-group-text" id="validationTooltip03" >Specifications</span>
-                <input type="text" class="form-control" id="validationTooltip03"  aria-label="Enter Here" aria-describedy="inputGroup-sizing-defullt">
+                <input type="text" class="form-control" @bind="Model.Specifications" id="validationTooltip03"  aria-label="Enter Here" aria-describedy="inputGroup-sizing-defullt">
                 <div class="valid-tooltip">
                     Perfect
                 </div>
             </div>
 
             @*Creates a dropdown for a user to select what catagory the model falls under*@
-            <label for="=" formFile" class="form-label">Please select the Category of your model</label>
+            <label form="formFile" class="form-label">Please select the Category of your model</label>
             <div class="btn-group">
-                <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    @(string.IsNullOrEmpty(selectedCategory) ? "Category" : selectedCategory)
-                </button>
-                <ul class="dropdown-menu">
+                <select id="categoryDropdown" class="form-select" @bind="Model.Category">
+                    <option value="">Select a Category</option>
                     @foreach (var category in categories)
                     {
-                        <li><a class="dropdown-item" @onclick="@(() => SelectCategory(category))">@category</a></li>
+                        <option value="@category">@category</option>
                     }
-                </ul>
+                </select>
             </div>
 
             @*Creates a dropdown for a user to select what file format the model falls under*@
-            <label for="=" formFile" class="form-label">Please select the file format of your modell</label>
+            <label form="formFile" class="form-label">Please select the file format of your modell</label>
             <div class="btn-group">
-                <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    @(string.IsNullOrEmpty(selectedFormat) ? "File Format" : selectedFormat)
-                </button>
-                <ul class="dropdown-menu">
-                    @foreach (var format in fileFormats)
-                    {
-                        <li><a class="dropdown-item" @onclick="@(() => SelectFormat(format))">@format</a></li>
-                    }
-                </ul>
+                    <select id="modelfilesDropdown" class="form-select" @bind="Model.ModelFiles">
+                        <option value="">Select the File Format</option>
+                        @foreach (var ModelFiles in modelFiles)
+                        {
+                            <option value="@modelFiles">@modelFiles</option>
+                        }
+                    </select>
             </div>
 
             <a @onclick="UploadModel" class="btn btn-outline-warning m-2">Upload Model</a>
         </form>
-
+      </EditForm>
     </Authorized>
 
     @*Allows the user to either Login or Register*@
@@ -108,7 +105,7 @@
 
 @code 
 {
-    private Model.DigitalModel Model = new Model.DigitalModel();
+    private DigitalModel Model = new Model.DigitalModel();
     private string title;
     private string description;
     private string specifications;
@@ -121,9 +118,9 @@
 
     private async Task HandleSubmit()
     {
-        if (string.IsNullOrWhiteSpace(title))
+        if (Model == null)
         {
-            
+            return;
         }
     }
 
