Database and error fixes

--- a/ModelProject/Components/Pages/Upload.razor
+++ b/ModelProject/Components/Pages/Upload.razor
@@ -11,14 +11,14 @@
 @*Checks if the user is signed in*@
 <AuthorizeView>
     <Authorized Context="Auth">
-      @Auth.User
+      @Auth.User.Identity.Name
       <EditForm Model="@Model" OnInvalidSubmit="@HandleSubmit">
         <h5>Upload Page</h5>
         <form class="row g-3 needs-validation" novalidate>
             @*Allows the user to input a Model Name:*@
             <div class="col-md-4 position-relative">
                 <label for="validationTooltip01" class="form-label">Model Name:</label>
-                <input type="text" class="form-control" @bind="Model.Title" id="validationTooltip01" required>
+                <InputText type="text" class="form-control" @bind-Value="Model.Title" id="validationTooltip01" required />
                 <div class="valid-tooltip">
                     Perfect
                 </div>
@@ -27,20 +27,20 @@
             @*Allows the user to input the Files of a 3D model*@
             <div class="mb-3">
                 <label for="=" formFile" class="form-label">Please Input The Model Files</label>
-                <input class="form-control" @bind="Model.ModelFiles" type="file" id="formFile" accept=".obj,.fbx,.stl,.gltf,.glb" required>
+                    <InputText class="form-control" @bind-Value="Model.ModelFiles" type="file" id="formFile" accept=".obj,.fbx,.stl,.gltf,.glb" required />
                 
             </div>
 
             @*Allows the user to input images of a 3D model*@
             <div class="mb-3">
                 <label for="=" formFile" class="form-label">Please Input Images of the 3D Model</label>
-                <input class="form-control" @bind="Model.Images" type="file" id="formFile" accept=".jpf,.jpeg,.png" multiple>
+                    <InputText class="form-control" @bind-Value="Model.Images" type="file" id="formFile" accept=".jpf,.jpeg,.png" multiple />
             </div>
 
             @*Allows the user to input a description*@
             <div class="input-group mb-3">
                 <span class="input-group-text" id="validationTooltip02">Description:</span>
-                <input type="text" class="form-control" @bind="Model.Description" id="validationTooltip02" aria-label="Enter Here" aria-describedy="inputGroup-sizing-defullt">
+                    <InputText class="form-control" @bind-Value="Model.Description" id="validationTooltip02" aria-label="Enter Here" aria-describedy="inputGroup-sizing-defullt" />
                 <div class="valid-tooltip">
                     Perfect
                 </div>
@@ -49,7 +49,7 @@
             @*Allows the user to input Specifcations*@
             <div class="input-group mb-3">
                 <span class="input-group-text" id="validationTooltip03" >Specifications</span>
-                <input type="text" class="form-control" @bind="Model.Specifications" id="validationTooltip03"  aria-label="Enter Here" aria-describedy="inputGroup-sizing-defullt">
+                    <InputText class="form-control" @bind-Value="Model.Specifications" id="validationTooltip03" aria-label="Enter Here" aria-describedy="inputGroup-sizing-defullt" />
                 <div class="valid-tooltip">
                     Perfect
                 </div>
@@ -58,25 +58,25 @@
             @*Creates a dropdown for a user to select what catagory the model falls under*@
             <label form="formFile" class="form-label">Please select the Category of your model</label>
             <div class="btn-group">
-                <select id="categoryDropdown" class="form-select" @bind="Model.Category">
+                <InputSelect id="categoryDropdown" class="form-select" @bind-Value="@category">
                     <option value="">Select a Category</option>
                     @foreach (var category in categories)
                     {
                         <option value="@category">@category</option>
                     }
-                </select>
+                </InputSelect>
             </div>
 
             @*Creates a dropdown for a user to select what file format the model falls under*@
-            <label form="formFile" class="form-label">Please select the file format of your modell</label>
+            <label form="formFile" class="form-label">Please select the file format of your model</label>
             <div class="btn-group">
-                    <select id="modelfilesDropdown" class="form-select" @bind="Model.ModelFiles">
+                    <InputSelect id="modelfilesDropdown" class="form-select" @bind-Value="@fileformat">
                         <option value="">Select the File Format</option>
-                        @foreach (var ModelFiles in modelFiles)
+                        @foreach (var ff in fileFormats)
                         {
-                            <option value="@modelFiles">@modelFiles</option>
+                            <option value="@ff">@ff</option>
                         }
-                    </select>
+                    </InputSelect>
             </div>
 
             <a @onclick="UploadModel" class="btn btn-outline-warning m-2">Upload Model</a>
@@ -111,10 +111,14 @@
     private string specifications;
     private string selectedCategory;
     private string selectedFormat;
-    private string[] images;
-    private string[] modelFiles;
+    private string[] images = [];
+    private string[] modelFiles = [];
+    private string fileformat;
+    private string category;
+
     private List<string> modelFilePaths = new();
     private List<string> imageFilePaths = new();
+    private List<string> categories = new List<string> { "Vehicles", "Sci-Fi", "Animal", "Horror", "Videogame", "Character" };
 
     private async Task HandleSubmit()
     {
@@ -122,10 +126,12 @@
         {
             return;
         }
+
+        UploadModel();
+        // submit the model
     }
 
 
-    private List<string> categories = new() { "Vehicles", "Sci-Fi", "Animal", "Horror", "Videogame", "Character" };
     private List<string> fileFormats = new() { "obj", "fbx", "stl", "gltf", "glb" };
 
     private void SelectCategory(string category)
@@ -156,22 +162,10 @@
 
     private void UploadModel()
     {
-
-
-        var model = new Model.DigitalModel
-                {
-                    Title = title,
-                    Category = selectedCategory,
-                    Description = description,
-                    ModelFiles = modelFiles,
-                    Images = images,
-                    Specifications = specifications,
-                    Downloads = 0,
-                    FileSize = 0,
-                };
-
+        Model.ModelFiles = fileformat;
+        Model.Category = category;
         // adds the model and redirects the user to the home page
-        ModelProvider.AddModel(model);
+        ModelProvider.AddModel(Model);
         NavigationManager.NavigateTo("/");
 
     }
