--- a/ModelProject/Components/Pages/Home.razor
+++ b/ModelProject/Components/Pages/Home.razor
@@ -20,7 +20,7 @@ else
                  <div class="card">
                      <img src="defult-thumbnail.png" class="card-img-top" alt="@model.Title Thumbnail" />
                      <div class="card-body">
-                            <p class="card-text">@model.Title</p>
+                            <h5 class="card-title">@model.Title</h5>
                             <p class="card-text">@model.Category</p>
                             <button @onclick="@(() => GoToModelPage(model.Id))" class="btn btn-outline-primary">View Details</button>
                      </div>
