My upload page is acting up again

--- a/ModelProject/Components/Pages/Home.razor
+++ b/ModelProject/Components/Pages/Home.razor
@@ -81,6 +81,11 @@ else
         NavigationManager.NavigateTo("/ModelPage/{modelId}");
     }
 
+    private void Info(DigitalModel digitalModel)
+    {
+        NavigationManager.NavigateTo($"/Info/{digitalModel.Id}");
+    }
+
     @*private void Sort(SortCriteria criteria)
     {
         sortCriteria = criteria;
