upload feature still wont work anymore

--- a/ModelProject/Components/Pages/ModelPage.razor
+++ b/ModelProject/Components/Pages/ModelPage.razor
@@ -1,7 +1,6 @@
 ﻿@page "/ModelPage/{id:int}"
+@using ModelProject.Context
 @using ModelProject.Model
-
-@inject ModelProvider ModelProvider
 @inject NavigationManager NavigationManager
 
  <div class="container">
