--- a/ModelProject/Components/Pages/Upload.razor
+++ b/ModelProject/Components/Pages/Upload.razor
@@ -25,7 +25,7 @@
 
             @*Allows the user to input the Files of a 3D model*@
             <div class="mb-3">
-                <label formFile" class="form-label">Please Input The Model Files</label>
+                <label formFile class="form-label">Please Input The Model Files</label>
                 <InputText class="form-control" @bind-Value="Model.ModelFiles" type="file" id="formFile" accept=".obj,.fbx,.stl,.gltf,.glb" />
                 
             </div>
